	*** RELEASE 7.3.2 ***
	
2006-02-26  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/python/electric.py: Now 

2006-02-26  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added Finish voices by Niko Lewman
	- Fixed eu numbers voices to use unicode formatting.

	* boards/sounds/Makefile.am:
	* boards/sounds/eu/alphabet/0.ogg:
	* boards/sounds/eu/alphabet/1.ogg:
	* boards/sounds/eu/alphabet/2.ogg:
	* boards/sounds/eu/alphabet/3.ogg:
	* boards/sounds/eu/alphabet/4.ogg:
	* boards/sounds/eu/alphabet/5.ogg:
	* boards/sounds/eu/alphabet/6.ogg:
	* boards/sounds/eu/alphabet/7.ogg:
	* boards/sounds/eu/alphabet/8.ogg:
	* boards/sounds/eu/alphabet/9.ogg:
	* boards/sounds/eu/alphabet/U0030.ogg:
	* boards/sounds/eu/alphabet/U0031.ogg:
	* boards/sounds/eu/alphabet/U0032.ogg:
	* boards/sounds/eu/alphabet/U0033.ogg:
	* boards/sounds/eu/alphabet/U0034.ogg:
	* boards/sounds/eu/alphabet/U0035.ogg:
	* boards/sounds/eu/alphabet/U0036.ogg:
	* boards/sounds/eu/alphabet/U0037.ogg:
	* boards/sounds/eu/alphabet/U0038.ogg:
	* boards/sounds/eu/alphabet/U0039.ogg:
	* boards/sounds/eu/alphabet/gcompris_alphabet_eu.assetml.in:
	* boards/sounds/fi/alphabet/10.ogg:
	* boards/sounds/fi/alphabet/11.ogg:
	* boards/sounds/fi/alphabet/12.ogg:
	* boards/sounds/fi/alphabet/13.ogg:
	* boards/sounds/fi/alphabet/14.ogg:
	* boards/sounds/fi/alphabet/15.ogg:
	* boards/sounds/fi/alphabet/16.ogg:
	* boards/sounds/fi/alphabet/17.ogg:
	* boards/sounds/fi/alphabet/18.ogg:
	* boards/sounds/fi/alphabet/19.ogg:
	* boards/sounds/fi/alphabet/20.ogg:
	* boards/sounds/fi/alphabet/U0030.ogg:
	* boards/sounds/fi/alphabet/U0031.ogg:
	* boards/sounds/fi/alphabet/U0032.ogg:
	* boards/sounds/fi/alphabet/U0033.ogg:
	* boards/sounds/fi/alphabet/U0034.ogg:
	* boards/sounds/fi/alphabet/U0035.ogg:
	* boards/sounds/fi/alphabet/U0036.ogg:
	* boards/sounds/fi/alphabet/U0037.ogg:
	* boards/sounds/fi/alphabet/U0038.ogg:
	* boards/sounds/fi/alphabet/U0039.ogg:
	* boards/sounds/fi/alphabet/U0061.ogg: